--- a/index.html
+++ b/index.html
@@ -1430,32 +1430,8 @@ function appendUtm(urlStr) {
   <div class="v-small" id="cleanHint">정제된 문구: 카드 혜택 문구를 짧고 깔끔하게 보여줍니다.</div>
 </div>
 
-<div id="vendorTop" class="vendor-sections">
-  <section class="vendor-section" data-section="guarantee">
-    <div class="vendor-section-head">
-      <div class="vsh-left">
-        <span class="vsh-title">보증 놀이터</span>
-        <span class="vsh-meta">CARD 1~3</span>
-      </div>
-      <div class="vsh-right">
-        <span class="vsh-chip">보증</span>
-      </div>
-    </div>
-    <div class="vendor-grid" id="vendorGridGuarantee"></div>
-  </section>
-
-  <section class="vendor-section" data-section="verified">
-    <div class="vendor-section-head">
-      <div class="vsh-left">
-        <span class="vsh-title">인증 놀이터</span>
-        <span class="vsh-meta">그 외 전체</span>
-      </div>
-      <div class="vsh-right">
-        <span class="vsh-chip">인증</span>
-      </div>
-    </div>
-    <div class="vendor-grid" id="vendorGridVerified"></div>
-  </section>
+<div id="vendorTop">
+  <div class="vendor-grid" id="vendorGrid"></div>
 </div>
 
 
@@ -2308,7 +2284,7 @@ function renderGrid() {
 
   const cardHTML = (id)=>{
     const d = CARD_DATA[id] || {};
-    const src = getCardSources(id);
+    const src = cardSourcesById(id);
     const firstSrc = src.gif || src.webp || src.jpg || "";
     return `
       <div class="card card--imageOnly" data-card="${id}" role="button" tabindex="0"
