--- a/index.html
+++ b/index.html
@@ -570,8 +570,8 @@ select.insight-select{
   user-select:none;
 }
 .go{ background:linear-gradient(135deg,var(--gold),var(--gold2)); color:#0b0b0b; }
-.copy{ background:#1f1f1f; color:#fff; border:1px solid rgba(255,255,255,.06); }
-.more{ background:rgba(255,255,255,.08); color:#fff; border:1px solid rgba(255,255,255,.12); }
+.copy{ background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03)); color:#fff; border:1px solid rgb(var(--accentRGB) / .22); box-shadow:0 10px 30px rgba(0,0,0,.35); }
+.more{ background:linear-gradient(180deg, rgb(var(--accentRGB) / .16), rgba(255,255,255,.04)); color:#fff; border:1px solid rgb(var(--accentRGB) / .26); box-shadow:0 10px 30px rgba(0,0,0,.35); }
 .telegram a{ display:block; margin-top:10px; color:#45b3ff; text-decoration:none; font-weight:900; }
 
 .reason-box{
@@ -766,13 +766,14 @@ select.insight-select{
 .small-btn{
   padding:8px 10px;
   border-radius:12px;
-  border:1px solid rgba(255,255,255,.10);
-  background:rgba(255,255,255,.06);
+  border:1px solid rgb(var(--accentRGB) / .22);
+  background:linear-gradient(180deg, rgb(var(--accentRGB) / .12), rgba(255,255,255,.04));
   color:#fff;
   font-size:12px;
   font-weight:900;
   cursor:pointer;
   user-select:none;
+  box-shadow:0 10px 30px rgba(0,0,0,.28);
 }
 .small-btn:hover{ filter:brightness(1.08); border-color:rgba(255,255,255,.16); }
 .small-btn:active{ transform: translateY(1px); }
@@ -1430,8 +1431,32 @@ function appendUtm(urlStr) {
   <div class="v-small" id="cleanHint">정제된 문구: 카드 혜택 문구를 짧고 깔끔하게 보여줍니다.</div>
 </div>
 
-<div id="vendorTop">
-  <div class="vendor-grid" id="vendorGrid"></div>
+<div id="vendorTop" class="vendor-sections">
+  <section class="vendor-section" data-section="guarantee">
+    <div class="vendor-section-head">
+      <div class="vsh-left">
+        <span class="vsh-title">보증 놀이터</span>
+        <span class="vsh-meta">CARD 1~3</span>
+      </div>
+      <div class="vsh-right">
+        <span class="vsh-chip">보증</span>
+      </div>
+    </div>
+    <div class="vendor-grid" id="vendorGridGuarantee"></div>
+  </section>
+
+  <section class="vendor-section" data-section="verified">
+    <div class="vendor-section-head">
+      <div class="vsh-left">
+        <span class="vsh-title">인증 놀이터</span>
+        <span class="vsh-meta">그 외 전체</span>
+      </div>
+      <div class="vsh-right">
+        <span class="vsh-chip">인증</span>
+      </div>
+    </div>
+    <div class="vendor-grid" id="vendorGridVerified"></div>
+  </section>
 </div>
 
 
@@ -1855,7 +1880,7 @@ function calcSimpleMargin() {
 
 /* ===== 카드 메타(필터/정렬용) ===== */
 (function enrichCards() {
-  const set = (id, patch)=>{ CARD_DATA[id] = Object.assign({tag:"rec", priority:"normal", recruit:false, reasons:[]}, CARD_DATA[id], patch); };
+  const set = (id, patch)=>{ CARD_DATA[id] = Object.assign({tag:"", priority:"normal", recruit:false, reasons:[]}, CARD_DATA[id], patch); };
 
   set("card1", {tag:"rec", priority:"high", reasons:["고액전용 전용 무제제 삼치기OK", "입금플러스 5+2 10+3 20+4", " 승인 관련 문의 필수!!"]});
   set("card2", {tag:"rec", priority:"high", reasons:["혜택 구성(첫충/페이백) 확인 용이", "리워드형 혜택 포함", "문의 라인이 명확"]});
@@ -1863,8 +1888,8 @@ function calcSimpleMargin() {
   set("card4", {tag:"rec", priority:"normal", reasons:["입플 폭이 넓어 선택지 다양", "혜택 분리 안내", "문의 채널 고정"]});
   set("card5", {tag:"new", priority:"normal", reasons:["원화/USDT 선택 가능", "페이백 비중 높은 편", "고액 유저 기준 확인"]});
   set("card6", {tag:"new", priority:"normal", reasons:["신규/매충/페이백 조합", "유지형 구성", "문의 라인이 명확"]});
-  set("card7", {tag:"ad", priority:"ad", recruit:true, reasons:["광고 문의 전용", "배너/카드/문구 협의 가능", "텔레그램으로만 진행"]});
-  set("card8", {tag:"ad", priority:"ad", recruit:true, reasons:["광고 문의 전용", "고정 노출/추가 옵션", "사칭 주의"]});
+  set("card7", {tag:"rec", priority:"normal", reasons:["미겜 혜택 요약", "첫충/페이백/출석 구성", "코드 입력 필수"]});
+  set("card8", {tag:"rec", priority:"normal", reasons:["스포츠+미겜 혜택", "첫충/페이백/출석 구성", "코드 입력 필수"]});
   set("card9", {tag:"new", priority:"normal", reasons:["입플/페이백 중심 안내", "고액 유저 기준 혜택", "문의 채널 고정"]});
   set("card10", {tag:"new", priority:"normal", reasons:["입플/페이백 중심 안내", "고액 유저 기준 혜택", "문의 채널 고정"]});
   set("card11", {tag:"new", priority:"normal", reasons:["입플/페이백 중심 안내", "고액 유저 기준 혜택", "문의 채널 고정"]});
@@ -2195,17 +2220,26 @@ function cardSourcesById(id) {
   // GIF는 실제로 업로드된 카드만 지정하세요 (없는 경우 아예 요청하지 않음)
   // 예) card2: img/imj2.gif, card3: img/img3.gif
   const GIF_OVERRIDES = {
-    card2: "img/imj2.gif",
-    card3: "img/img3.gif"
+    // GIF가 있는 카드만 여기에 등록 (없으면 아예 요청하지 않음)
+    // card2는 파일명이 img2.gif / imj2.gif 둘 중 하나일 수 있어 2단 폴백 지원
+    card2: ["img/img2.gif", "img/imj2.gif"],
+    card3: ["img/img3.gif"]
   };
 
-  const gif = GIF_OVERRIDES[id] || "";
+  const g = GIF_OVERRIDES[id];
+  const gif  = Array.isArray(g) ? (g[0] || "") : (g || "");
+  const gif2 = Array.isArray(g) ? (g[1] || "") : "";
+
   return {
     gif,
+    gif2,
     webp: `img/img${n}.webp`,
     jpg: `img/img${n}.jpg`
   };
 }
+
+// 호환: 카드 소스 헬퍼 (이름 차이로 인한 렌더 에러 방지)
+const getCardSources = (id)=> cardSourcesById(id);
 
 function renderGrid() {
   const gridG = document.getElementById("vendorGridGuarantee");
@@ -2284,7 +2318,7 @@ function renderGrid() {
 
   const cardHTML = (id)=>{
     const d = CARD_DATA[id] || {};
-    const src = cardSourcesById(id);
+    const src = getCardSources(id);
     const firstSrc = src.gif || src.webp || src.jpg || "";
     return `
       <div class="card card--imageOnly" data-card="${id}" role="button" tabindex="0"
@@ -2293,6 +2327,7 @@ function renderGrid() {
           <img class="cardThumb"
                src="${firstSrc}"
                data-gif="${src.gif}"
+               data-gif2="${src.gif2||""}"
                data-webp="${src.webp}"
                data-jpg="${src.jpg}"
                loading="lazy" decoding="async"
@@ -2326,7 +2361,7 @@ function renderGrid() {
     if(!img) return;
 
     // GIF 우선 → WEBP → JPG 순서로 자동 폴백
-    const chain = [img.dataset.gif, img.dataset.webp, img.dataset.jpg].filter(Boolean);
+    const chain = [img.dataset.gif, img.dataset.gif2, img.dataset.webp, img.dataset.jpg].filter(Boolean);
     let step = 0;
 
     const applyBg = ()=>{
