--- a/analysis/index.html
+++ b/analysis/index.html
@@ -3640,9 +3640,9 @@ function renderTopList(id, list, type){
 
   // 메인 페이지 상단 우선 업체 + 광고모집 포함
   const ads = [
-    {key:"card1", title:"B WIN", sub:"고액전용 · 입금플러스 지원", href:"./#vendors", badge:"추천"},
-    {key:"card2", title:"CAPS", sub:"고액전용 · 페이백/출석", href:"./#vendors", badge:"추천"},
-    {key:"card3", title:"BETZY", sub:"스포츠/미겜 · 페이백", href:"./#vendors", badge:"추천"},
+    {key:"card1", title:"SPEED Bet", sub:"고액전용 · 입금플러스 지원", href:"./#vendors", badge:"추천"},
+    {key:"card2", title:"OK Bet", sub:"고액전용 · 페이백/출석", href:"./#vendors", badge:"추천"},
+    {key:"card3", title:"어느날", sub:"고액전용· 미니게임 · 무제제 ", href:"./#vendors", badge:"추천"},
     {key:"card7", title:"광고 모집", sub:"여기에 광고가 노출됩니다", href:"./#vendors", badge:"AD"},
     {key:"card8", title:"광고 모집", sub:"문의 후 등록 가능", href:"./#vendors", badge:"AD"}
   ];
