--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@ function appendUtm(urlStr) {
             <path d="M12 2l3 7 7 3-7 3-3 7-3-7-7-3 7-3 3-7z"></path>
           </svg>
         </span>
-        <span class="label"> 보증 놀이터 <span class="sub">바로 가기</span></span>
+        <span class="label"> 88ST.Cl0oud 보증 놀이터 <span class="sub">바로 가기</span></span>
       </a>
     </div>
   </div>
@@ -1435,7 +1435,7 @@ function appendUtm(urlStr) {
   <section class="vendor-section" data-section="guarantee">
     <div class="vendor-section-head">
       <div class="vsh-left">
-        <span class="vsh-title">보증 놀이터</span>
+        <span class="vsh-title">보증 </span>
         <span class="vsh-meta"> </span>
       </div>
       <div class="vsh-right">
@@ -1448,7 +1448,7 @@ function appendUtm(urlStr) {
   <section class="vendor-section" data-section="verified">
     <div class="vendor-section-head">
       <div class="vsh-left">
-        <span class="vsh-title">인증 놀이터</span>
+        <span class="vsh-title">인증 </span>
         <span class="vsh-meta"> </span>
       </div>
       <div class="vsh-right">
