--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@ function appendUtm(urlStr) {
             <path d="M7 14l3-3 3 2 5-6"></path>
           </svg>
         </span>
-        <span class="label">분석기 사용<span class="sub"> 중·고급 · 핸디 · 언더·오버 · EV </span></span>
+        <span class="label">분석기 사용<span class="sub"> 중 · 고급 · 핸디 · 언더·오버 · EV </span></span>
       </a>
       <a class="analyze-btn secondary" href="#vendorTop" data-cta="vendors">
         <span class="icon" aria-hidden="true">
@@ -1241,7 +1241,7 @@ function appendUtm(urlStr) {
             <path d="M12 2l3 7 7 3-7 3-3 7-3-7-7-3 7-3 3-7z"></path>
           </svg>
         </span>
-        <span class="label"> 88ST.Cl0oud 보증 놀이터 <span class="sub">바로 가기</span></span>
+        <span class="label"> 보증 · 인증 사이트  <span class="sub">바로 가기</span></span>
       </a>
     </div>
   </div>
